force-app/main/default/objects/Flightpath_Outcomes__c/Flightpath_Outcomes__c.object-meta.xml
<CustomObject>
    <label>Flightpath Outcomes</label>
    <nameField>
        <displayFormat>FPO-{0000}</displayFormat>
        <label>Flight Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flightpath Outcomes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>