force-app/main/default/objects/Flightpath_Outcomes__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Flightpath Outcomes</relationshipLabel>
    <relationshipName>Flightpath_Outcomes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>