force-app/main/default/objects/Flightpath_Outcomes__c/fields/Employee_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Employee_Onboarding__c</fullName>
    <label>Employee Onboarding</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HR Team</fullName>
            </value>
            <value>
                <fullName>Managers</fullName>
            </value>
            <value>
                <fullName>Self Service Employees</fullName>
            </value>
            <value>
                <fullName>Payroll Team</fullName>
            </value>
            <value>
                <fullName>Recruitment Consultants</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>