force-app/main/default/objects/Flightpath_Outcomes__c/fields/Expected_Product_Business_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Expected_Product_Business_Benefits__c</fullName>
    <label>Expected Product/Business Benefits</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eliminate departmental barriers</fullName>
            </value>
            <value>
                <fullName>Engage every employee every day</fullName>
            </value>
            <value>
                <fullName>Drive efficiency and accuracy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>