force-app/main/default/objects/Flightpath_Outcomes__c/fields/Product_Adoption__c.field-meta.xml
<CustomField>
    <fullName>Product_Adoption__c</fullName>
    <label>Product Adoption</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>