force-app/main/default/objects/Flightpath_Outcomes__c/fields/Product_Routing__c.field-meta.xml
<CustomField>
    <fullName>Product_Routing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>ProductRouting__c</referenceTo>
    <relationshipLabel>Flightpath Outcomes</relationshipLabel>
    <relationshipName>Flightpath_Outcomes</relationshipName>
    <type>Lookup</type>
</CustomField>