force-app/main/default/objects/Flightpath_Outcomes__c/fields/Time_to_Value_Weeks__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Value_Weeks__c</fullName>
    <label>Time to Value (Weeks)</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>